# Final_Project

./: .coveragerc  .dockerignore  .env  .env.example  .gitignore  Compute_Threshold.md  DEMO_SCRIPT.md  Dockerfile.backend  FRONTEND_TYPESCRIPT_REFACTOR_PLAN.md  INDUSTRIAL_GAP_CLOSURE_PLAN.md  Makefile  Makefile.full  Makefile.patch  READINESS_REPORT.md  README.md  apps  baselines  deploy_assets  docker-compose.yml  makefile_v2  patches  pyproject.toml  pyrightconfig.json  pytest.ini  render.yaml  report_note.md  requirements-dev.txt  requirements.in  requirements.lock.txt  requirements.txt  requirements_server.txt  research_ops  server  src  tests
Archive/: Makefile
apps/: Dockerfile.dev  README.md  package-lock.json  package.json
artifacts/: README.md  artifact_bundle.json
configs/: datasets.yaml  deploy_modes.yaml  ops_caucafall.yaml  ops_caucafall_gcn.yaml  ops_le2i.yaml  ops_le2i_gcn.yaml  ops_muvim.yaml  ops_urfd.yaml  ops_urfd_gcn.yaml
core/: __init__.py  alerting.py  augment.py  calibration.py  check_spans.py  ckpt.py  confirm.py  ema.py  features.py  losses.py  metrics.py  models.py  preprocess.py  signals.py  uncertainty.py  yamlio.py
deploy/: README.md  common.py  run_alert_policy.py  run_modes.py
docs/: Full-Project-Audit.md  INDUSTRIAL_REFACTOR_PLAN.md  Literature Review.docx  README.md  training_upgrades.md
eval/: __init__.py  calibrate_temperature.py  fit_ops.py  metrics.py  mine_hard_negatives.py  mine_near_miss_negatives.py  plot_fa_recall.py  replay_eval.py  score_unlabeled_alert_rate.py
frontend/: README.md  example_payload.json
(+2111 files in other folders)
